# graphite-time-mgmnt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  data.dvc  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
data/raw/: .example.employees.json  .gitignore  .private_params.example.json  query_public.sql
docs/: ml_system_design_doc.md
models/: .gitignore
notebooks/: baseline.ipynb  eda.ipynb  expetiment_ranker_mvp.ipynb  mvp.ipynb  mvp_w_llm_only.ipynb  play_with_pipelines_transformers.ipynb
src/: config.py  main.py
src/api/: api.py  ranker.py  schemas.py  services.py
src/data/: combine_text_info_into_one_task.py  data_connector.py  enrich_with_slack_thread.py  filter_tasks_n_fields_jira_json.py  get_final_data_to_train.py  get_raw_data_from_dwh.py  get_raw_data_from_jira_api.py  remove_pii_from_data.py
src/modeling/: metrics.py
src/tools/: ask_anthropic.py  pii_purifier.py  pii_purifier_prompt.json  task_creator.py  task_creator_prompt.json  task_estimation_prompt.json
tests/unit/: tests_tools.py
tests/unit/tools/: tests_pii_purifier.py  tests_task_creator.json  tests_task_creator.py
