[tool.poetry]
name = "mlsd-course-2024"
version = "0.1.0"
description = ""
authors = ["victor.barbarich <victor.barbarich@dif.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
anthropic = "^0.42.0"
pydantic-settings = "^2.7.1"
dvc = "^3.58.0"
snowflake-sqlalchemy = "^1.7.2"
pandas = "^2.2.3"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
black = "^24.10.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "W", "F"]
lint.ignore = ["E501"]

[tool.black]
line-length = 88
