[tool.poetry]
name = "mlsd-course-2024"
version = "0.1.0"
description = ""
authors = ["victor.barbarich <victor.barbarich@dif.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
anthropic = "^0.42.0"
pydantic-settings = "^2.7.1"
dvc = {extras = ["s3"], version = "^3.58.0"}
snowflake-sqlalchemy = "^1.7.2"
pandas = "^2.2.3"
loguru = "^0.7.3"
mlflow = "^2.19.0"
slack-sdk = "^3.34.0"
plotly = "^5.24.1"
notebook = "^7.3.2"
kaleido = "0.2.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
black = "^24.10.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "S"]
lint.ignore = ["E501", "S101"]

[tool.black]
line-length = 88
