[tool.poetry]
name = "mlsd-course-2024"
version = "0.1.0"
description = ""
authors = ["victor.barbarich <victor.barbarich@dif.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
anthropic = "^0.42.0"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"
loguru = "^0.7.3"
slack-sdk = "^3.34.0"
fastapi = { extras = ["standard"], version = "^0.115.7" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
black = "^24.10.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
dvc = { extras = ["s3"], version = "^3.58.0" }
snowflake-sqlalchemy = "^1.7.2"
mlflow = "^2.19.0"
plotly = "^5.24.1"
notebook = "^7.3.2"
kaleido = "0.2.1"
seaborn = "^0.13.2"
pygit2 = "1.16.0"
transformers = "^4.48.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
sentence-transformers = "^3.4.0"
catboost = "^1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "S"]
lint.ignore = ["E501", "S101"]

[tool.black]
line-length = 88
